fix shift selection for items with same date

--- a/styles/global.css
+++ b/styles/global.css
@@ -60,6 +60,9 @@ body {
 	background: url('/images/delete_selected.png') no-repeat center center;
 	display: none;
 }
+#context-undelete {
+	display: none;
+}
 #button-print {
 	background: url('/images/print.png') no-repeat center center;
 }
